--- a/src/public/global.css
+++ b/src/public/global.css
@@ -27,10 +27,43 @@ body {
   z-index: 2;
 }
 
+.controls {
+  width: 100%;
+  display: flex;
+  flex-direction: rows;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.controls button {
+  margin-right: 20px;
+}
+
+.controls .btn-group button {
+  margin-right: 2px;
+}
+
+.controls .btn-group {
+  margin-right: 15px;
+}
+
 audio {
   width: 100%;
 }
 
 #userInput {
+  margin-top: 80px;
   font-size: 30px;
+  overflow:hidden;
+  padding:10px;
+  display:block;
+  transition: all 0.3s;
+  border: none;
+  resize: none;
+  outline: none;
+}
+
+.hidden {
+  display:none;
 }
